# ETHDatathon-2026-Robinreal

./: .gitignore  README.md  challenge.md  env.md  feature_hierarchy.md  feature_list_boolean.csv  feature_list_boolean_questions.csv  features.csv  preprocess_apartments.py  pyproject.toml  run_batch_feature_extraction.py  test_results_gemini25_flash_1000_apartments.csv  visualize_features.ipynb
agent_docs/: location_features_plan.md
app/harness/: search_service.py
app/models/: apartment_value.py  llm_pairwise.py  proximity.py  rules.py  similarity.py  soft_filter_score.py  utils.py
app/participant/: process_constraints.py  ranking.py
app/query_parsing/: __init__.py  feature.csv  parser.py  prompts.py  schema.py
app/query_parsing/config/: features.json  tools.json
data/: realistic_user_prompts.json  test_queries.json
datasets/user_query/: test_cases.csv
notebooks/: README.md  demo.ipynb  prototype-backend-API.ipynb  prototype.ipynb
query_parsing/: __init__.py  filter.py  parser.py  parser_tool.py  prompts.py  schema.py
query_parsing/config/: examples.json
scripts/: clean_gtfs.py  install_cloudflared.py  serve.py  start_tunnel.sh
src/location_features/: README.md  __init__.py  amenities.py  commute.py  green_share.py  paths.py
src/location_features/tests/: test_smoke.py
tests/: README.md  sample_properties.csv  test_cases_tool.json  test_query_parser.py  test_query_parser_tool.py  test_ranking.py
tests/output/: query_parser_results.jsonl
