[project]
name = "robinreal-team"
version = "0.1.0"
description = "Datathon 2026 — RobinReal team submission (location features, demo, prototype)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Location features — Function 2 (amenities + green share)
    "duckdb>=1.0",
    "rasterio>=1.3",      # WorldCover green-share raster reads
    "numpy>=1.26",
    # Demo notebook
    "folium>=0.16",
    "pandas>=2.0",
    "requests>=2.31",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Real multimodal routing for Function 1. Requires JDK 11+ at runtime
# (`brew install openjdk@11`) before installing.  Without this group, commute()
# falls back to the Haversine + nearest-GTFS-stop proxy.
routing = [
    # jpype1 1.7 has no prebuilt wheel — must pin to 1.5 series
    "jpype1>=1.5,<1.6",
    "r5py>=1.0",
    "geopandas>=0.14",
    "shapely>=2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
